# To-do-list-rpg

./: .env.example  .gitignore  README.md  alembic.ini  config.toml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1a08ecaab860_init.py  21ae08415927_correct_item_requirements.py  6abf4dfa96f7_new_shop_transaction_table.py
app/: .env.example  exceptions.py  main.py  requirements.txt
app/api/: exception_handlers.py
app/api/routers/: auth.py  inventory.py  items.py  main.py  shop.py  skills.py  tasks.py  users.py
app/core/: __init__.py  database.py  dto.py  init_database.py  redis_config.py  security.py  session.py
app/core/sql/functions/: uuid_generate_v7.sql
app/domain/: __init__.py  tasks.py
app/enums/: __init__.py  task_types.py
app/ioc/: __init__.py  base.py  item.py  skill.py  task.py  user.py
app/main/: main.py
app/models/: __init__.py  base.py  inventory.py  items.py  relations.py  shop.py  skills.py  tasks.py  users.py
app/repositories/: __init__.py  auth.py  base.py  interfaces.py  inventory.py  items.py  redis.py  skills.py  tasks.py  tasks_history.py  transaction.py  users.py
app/schemas/: __init__.py  dto.py  items.py  skills.py  tasks.py  users.py
app/services/: __init__.py  auth.py  sessions.py
app/services/interactors/: __init__.py  items.py  skills.py  tasks.py  users.py
app/tasks_manager/: tasks.py
src/app/: main.py
src/app/application/: exceptions.py
src/app/application/dto/: __init__.py  items.py  sentinel_types.py  shared.py  skills.py  task_categories.py  tasks.py  users.py
src/app/application/dto_mappers/: __init__.py  complete_task.py  items.py  tasks.py  users.py
src/app/application/interactors/: __init__.py
src/app/application/interfaces/: cash_interfaces.py  repositories_interfaces.py  transaction_interfaces.py
src/app/application/mappers/: __init__.py  detail_tasks.py  skills.py  task_categories.py  tasks.py  users.py
src/app/core/: database.py  redis_config.py  security.py  taskiq.py
src/app/domain/: __init__.py  inventory.py  item_history.py  item_requirements.py  items.py  shop.py  skills.py  task_categories.py  tasks.py  tasks_history.py  user_rank.py  users.py  value_objects.py
src/app/domain/enums/: __init__.py  task_types.py
src/app/infrastructure/: config.py  redis.py
src/app/infrastructure/alembic/: env.py
src/app/infrastructure/database/: transaction.py
src/app/infrastructure/di_providers/: __init__.py  base.py  inventory.py  item.py  shop.py  skill.py  stats.py  task.py  task_categories.py  user.py
src/app/infrastructure/mappers/: __init__.py  items.py  skills.py  task.py  user.py
src/app/infrastructure/tasks_manager/: tasks.py
src/app/presentation/: exception_handlers.py
src/todo_rpg/: main.py
src/todo_rpg/application/: exceptions.py
src/todo_rpg/domain/: __init__.py  inventory.py  item_history.py  item_requirements.py  items.py  shop.py  shop_transaction.py  skills.py  task_categories.py  tasks.py  tasks_history.py  user_rank.py  users.py  value_objects.py
src/todo_rpg/infrastructure/: redis.py
src/todo_rpg/presentation/: exception_handlers.py
tests/: fabrics.py
tests/unit/: test_tasks.py
tests/unit/tasks/: test_calculate_multipliers.py  test_calculate_rewards.py  test_delete.py  test_task_complete.py
(+326 files in other folders)
