[project]
name = "todo_rpg"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiogram==3.23.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "alembic==1.17.0",
    "amqp==5.3.1",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asyncpg==0.30.0",
    "attrs==25.4.0",
    "billiard==4.2.4",
    "celery==5.6.2",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "cfgv==3.5.0",
    "click==8.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "dature[env,toml]>=0.18.0",
    "dishka==1.9.1",
    "distlib==0.4.0",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.120.1",
    "fastapi-cli==0.0.14",
    "fastapi-cloud-cli==0.3.1",
    "filelock==3.29.0",
    "frozenlist==1.8.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "identify==2.6.19",
    "idna==3.11",
    "iniconfig==2.3.0",
    "isort==8.0.1",
    "itsdangerous==2.2.0",
    "izulu==0.50.0",
    "jinja2==3.1.6",
    "kombu==5.6.2",
    "magic-filter==1.0.12",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "nodeenv==1.10.0",
    "orjson==3.11.4",
    "packaging==26.0",
    "passlib==1.7.4",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "pre-commit==4.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psycopg2==2.9.11",
    "pycparser==2.23",
    "pycron==3.2.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-extra-types==2.10.6",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "pytest==9.0.3",
    "pytest-check==2.8.0",
    "python-dateutil==2.9.0.post0",
    "python-discovery==1.3.1",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.1",
    "ruff==0.15.2",
    "sentry-sdk==2.42.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "starlette==0.49.0",
    "taskiq==0.12.1",
    "taskiq-dependencies==1.5.7",
    "taskiq-redis==1.2.2",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "uuid-utils==0.14.0",
    "uuid6==2025.0.1",
    "uv==0.11.14",
    "uvicorn==0.38.0",
    "vine==5.1.0",
    "virtualenv==21.3.3",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "yarl==1.22.0",
]

[tool.ruff.lint.per-file-ignores]
"src/todo_rpg/infrastructure/database/repositories/*.py" = ["E712"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["-vv"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_rpg"]